Pluto-app_config/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pluto-frontend-ingress
spec:
  tls:
  - hosts:
      - plutoapp.tweeny.in
    secretName: pluto-frontend-tls
  rules:
  - host: plutoapp.tweeny.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pluto-frontend-service
            port:
              number: 3000
